Change pop-up image back to coloured square for testing purposes as 'coal' image not showing correctly within the grid sqaures

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,5 @@ html, body {
 }
 
 .coal {
-    background-image: url("assets/images/power-station.png");
-    background-size: cover;
+    background-color: hotpink;
 }
